Closed Bug 1925358 Opened 28 days ago Closed 27 days ago

Crash in [@ nsObserverService::EnsureValidCall | nsObserverService::NotifyObservers | TelemetryEvent::RecordEventNative]

Categories

(Toolkit :: Telemetry, defect, P1)

Unspecified
Windows 11
defect

Tracking

()

RESOLVED FIXED
133 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox131 --- unaffected
firefox132 --- unaffected
firefox133 + fixed

People

(Reporter: dmeehan, Assigned: chutten)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/229381f6-8e3b-4871-9faf-1f7f80241017

MOZ_CRASH Reason:

MOZ_CRASH(Using observer service off the main thread!)

Top 10 frames:

0  xul.dll  nsObserverService::EnsureValidCall() const  xpcom/ds/nsObserverService.cpp:170
0  xul.dll  nsObserverService::NotifyObservers(nsISupports*, char const*, char16_t const*)  xpcom/ds/nsObserverService.cpp:275
1  xul.dll  TelemetryEvent::RecordEventNative(mozilla::Telemetry::EventID, mozilla::Maybe...  toolkit/components/telemetry/core/TelemetryEvent.cpp:835
2  xul.dll  mozilla::glean::impl::EventMetric<mozilla::glean::dom_quota_try::ErrorStepExt...  toolkit/components/glean/bindings/private/Event.h:95
3  xul.dll  mozilla::dom::quota::LogError(nsTSubstring<char> const&, mozilla::Variant<moz...  dom/quota/QuotaCommon.cpp:605
4  xul.dll  mozilla::dom::quota::HandleError<nsresult>(char const*, nsresult const&, char...  dom/quota/QuotaCommon.h:1423
5  xul.dll  mozilla::dom::cache::DirectoryPaddingDeleteFile::<lambda_34>::operator()(nsre...  dom/cache/FileUtils.cpp:803
5  xul.dll  mozilla::dom::quota::OrElseIf(mozilla::Result<mozilla::Ok, nsresult>&&, mozil...  dom/quota/QuotaCommon.h:964
5  xul.dll  mozilla::dom::cache::DirectoryPaddingDeleteFile(nsIFile&, mozilla::dom::cache...  dom/cache/FileUtils.cpp:803
6  xul.dll  mozilla::dom::cache::CacheQuotaClient::InitOrigin::<lambda_43>::operator()() ...  dom/cache/QuotaClient.cpp:157
Flags: needinfo?(jvarga)

Well, I'm not sure this is related to bug 1867997.

The event recording was recently converted to use glean APIs.

Chris, can you take a look ?

Flags: needinfo?(jvarga) → needinfo?(chutten)

I think I found it: https://phabricator.services.mozilla.com/D225761
That one added NotifyObservers(nullptr, "event-telemetry-storage-limit-reached".

Component: Storage: Quota Manager → Telemetry
Product: Core → Toolkit
Regressed by: 1921790
No longer regressed by: 1867997

(In reply to Jan Varga [:janv] from comment #2)

I think I found it: https://phabricator.services.mozilla.com/D225761
That one added NotifyObservers(nullptr, "event-telemetry-storage-limit-reached".

Sorry for the noise, I was looking after comment 1 and found the same cause

Flags: needinfo?(chutten) → needinfo?(florian)

Yeah, this is bug 1921790 where we moved observer notification from "definitely on the main thread because this is a JS-only API" to "on the instrumentation thread, which is usually the main thread but isn't guaranteed to be".

A quick one to fix.

Assignee: nobody → chutten
Severity: -- → S4
Status: NEW → ASSIGNED
Flags: needinfo?(florian)
Priority: -- → P1
Pushed by chutten@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/eaa205d62ce3 Only notify observers on main thread r=TravisLong
Status: ASSIGNED → RESOLVED
Closed: 27 days ago
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: