Bug 1925358 - Only notify observers on main thread r=TravisLong

Differential Revision: https://phabricator.services.mozilla.com/D226044